More single+bulk CRUD client util methods.